force-app/main/default/objects/Meta_AdSet__c/Meta_AdSet__c.object-meta.xml
<CustomObject>
    <label>Conjunto de Anúncios Meta</label>
    <nameField>
        <label>Nome do Conjunto de Anúncios</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conjuntos de Anúncios Meta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>