force-app/main/default/objects/Meta_AdSet__c/fields/Cost_Per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Lead__c</fullName>
    <label>Custo por Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>