force-app/main/default/objects/Meta_AdSet__c/fields/Insights_Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Insights_Last_Refreshed__c</fullName>
    <label>Última Atualização de Insights</label>
    <type>DateTime</type>
</CustomField>