force-app/main/default/objects/Meta_AdSet__c/fields/Leads_Generated__c.field-meta.xml
<CustomField>
    <fullName>Leads_Generated__c</fullName>
    <label>Leads Gerados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>