force-app/main/default/objects/Meta_AdSet__c/fields/Meta_AdSet_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_AdSet_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID do Conjunto de Anúncios Meta</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>