force-app/main/default/objects/Meta_AdSet__c/fields/Meta_Billing_Event__c.field-meta.xml
<CustomField>
    <fullName>Meta_Billing_Event__c</fullName>
    <label>Evento de Cobrança Meta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>