force-app/main/default/objects/Meta_AdSet__c/fields/Meta_Lifetime_Budget__c.field-meta.xml
<CustomField>
    <fullName>Meta_Lifetime_Budget__c</fullName>
    <label>Orçamento Vitalício Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>