force-app/main/default/objects/Meta_AdSet__c/fields/Meta_Optimization_Goal__c.field-meta.xml
<CustomField>
    <fullName>Meta_Optimization_Goal__c</fullName>
    <label>Objetivo de Otimização Meta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>